# ashby-dashboard

./: .env.example  .gitignore  CLAUDE-CODE-KICKOFF.md  CLAUDE.md  Dockerfile  README.md  railway.json
backend/: README.md  openapi.json  pyproject.toml
backend/app/: config.py  main.py  security.py
backend/app/api/: _common.py  funnel.py  health.py  overview.py  people.py  pipeline.py  refresh.py  roles.py  sources.py  velocity.py
backend/app/ashby/: client.py  entities.py  history.py  paginator.py
backend/app/cache/: derived.py  registry.py  store.py
backend/app/sync/: runner.py  scheduler.py  service.py
backend/tests/: test_paginator.py  test_store.py
docs/: BUILD-PLAN.md  backend-architecture.md  brand-tokens.md  frontend-and-mobile.md  information-architecture.md  mockup.html  wireframes.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: index.css  main.tsx
frontend/src/components/: KPI.tsx  RefreshButton.tsx  RoundsStrip.tsx  Shell.tsx  SyncModal.tsx  Timeline.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Funnel.tsx  Home.tsx  Overview.tsx  People.tsx  Pipeline.tsx  RoleDetail.tsx  Roles.tsx  Settings.tsx  Sources.tsx  Velocity.tsx
scripts/: dev.sh  seed_from_ashby.py  verify_ashby_key.sh
