[project]
name = "ashby-dashboard-backend"
version = "0.1.0"
description = "Sarvam Hiring Dashboard backend: FastAPI + Ashby sync + CSV/parquet cache."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=17",
    "apscheduler>=3.10",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
